--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,3 +1,8 @@
 // Import your components CSS files here.
 @import "alert";
 @import "navbar";
+@import "card";
+@import "footer";
+@import "show_card";
+@import "buttons";
+@import "form";
