--- a/app/views/cocktails/edit.html.erb
+++ b/app/views/cocktails/edit.html.erb
@@ -8,17 +8,19 @@
     <a href="<%= new_cocktail_path  %>" class="navbar-wagon-item navbar-wagon-link">Add New Cocktail</a>
   </div>
 </div>
+
 <div class="container">
   <div class="row">
     <div class="col-sm-4 col-sm-offset-4">
-      <h2>Add Ingredient</h2>
-      <%= simple_form_for [ @cocktail, @dose ] do |f| %>
+      <h2>Edit Cocktail</h2>
+
+      <%= simple_form_for(@cocktail) do |f| %>
       <%= f.error_notification %>
       <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
-      <% if @dose.errors.any? %>
+      <% if @cocktail.errors.any? %>
       <div class="errors-container">
         <ul>
-          <% @dose.errors.full_messages.each do |message| %>
+          <% @cocktail.errors.full_messages.each do |message| %>
           <li><%= message %></li>
           <% end %>
         </ul>
@@ -26,26 +28,20 @@
       <% end %>
 
       <div class="form-inputs">
-        <%= f.input :description %>
-        <%= f.association :ingredient %>
+        <%= f.input :name %>
+        <%= f.input :photo %>
+        <%= f.input :photo_cache, as: :hidden %>
       </div>
 
       <div class="form-actions">
-        <%= f.submit "Add Ingredient", class: "btn btn-black new-button"%>
+        <%= f.button :submit, class: "btn btn-black new-button"%>
       </div>
       <% end %>
-
       <%= link_to 'Back', cocktail_path(@cocktail), class: "btn btn-black new-button" %>
+
     </div>
   </div>
 </div>
-<div class="footer">
-  <div class="footer-links">
-    <a href="https://github.com/joshbolland" target="_blank"><i class="fab fa-github"></i></a>
-    <a href="https://www.linkedin.com/in/joshuabolland/" target="_blank"><i class="fab fa-linkedin"></i></a>
-    <a href="https://twitter.com/joshbolland95" target="_blank"><i class="fab fa-twitter"></i></a>
-  </div>
-  <div class="footer-copyright">
-    <a href="https://github.com/joshbolland" target="_blank">Made by Josh Bolland</a>
-  </div>
-</div>
+
+<%= render 'footer' %>
+
