--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,25 +1,46 @@
-<h2>New Cocktail</h2>
+<div class="navbar-wagon">
+  <a href="/" class="navbar-wagon-brand">
+    <%= image_tag("shaker") %>
+  </a>
+    <a href="/" class="navbar-wagon-title"><%= image_tag("logo") %></a>
+  <div class="navbar-wagon-right hidden-xs hidden-sm">
+    <a href="" class="navbar-wagon-item navbar-wagon-link">Search</a>
+    <a href="<%= new_cocktail_path  %>" class="navbar-wagon-item navbar-wagon-link">Add New Cocktail</a>
+  </div>
+</div>
 
-<%= simple_form_for(@cocktail) do |f| %>
-  <%= f.error_notification %>
-  <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
-  <% if @cocktail.errors.any? %>
-    <div class="errors-container">
-      <ul>
-        <% @cocktail.errors.full_messages.each do |message| %>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-4 col-sm-offset-4">
+      <h2>New Cocktail</h2>
+
+      <%= simple_form_for(@cocktail) do |f| %>
+      <%= f.error_notification %>
+      <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
+      <% if @cocktail.errors.any? %>
+      <div class="errors-container">
+        <ul>
+          <% @cocktail.errors.full_messages.each do |message| %>
           <li><%= message %></li>
-        <% end %>
-      </ul>
+          <% end %>
+        </ul>
+      </div>
+      <% end %>
+
+      <div class="form-inputs">
+        <%= f.input :name %>
+        <%= f.input :photo %>
+        <%= f.input :photo_cache, as: :hidden %>
+      </div>
+
+      <div class="form-actions">
+        <%= f.button :submit, class: "btn btn-black new-button"%>
+      </div>
+      <% end %>
+      <%= link_to 'Home', cocktails_path, class: "btn btn-black new-button" %>
     </div>
-  <% end %>
-
-  <div class="form-inputs">
-    <%= f.input :name %>
   </div>
+</div>
 
-  <div class="form-actions">
-    <%= f.button :submit, class: "btn btn-danger"%>
-  </div>
-<% end %>
+<%= render 'footer' %>
 
-<%= link_to 'Back', cocktails_path %>
