--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,10 +1,10 @@
 <div class="navbar-wagon">
   <!-- Logo -->
   <a href="/" class="navbar-wagon-brand">
-    <%= image_tag("shaker") %>
+    <%= cl_cl_image_tag("shaker") %>
   </a>
 
-  <a href="/" class="navbar-wagon-title"><%= image_tag("logo") %></a>
+  <a href="/" class="navbar-wagon-title"><%= cl_image_tag("logo") %></a>
 
   <div class="navbar-wagon-right hidden-xs hidden-sm">
     <a href="" class="navbar-wagon-item navbar-wagon-link">Search</a>
