--- a/app/views/cocktails/edit.html.erb
+++ b/app/views/cocktails/edit.html.erb
@@ -1,8 +1,8 @@
 <div class="navbar-wagon">
   <a href="/" class="navbar-wagon-brand">
-    <%= image_tag("shaker") %>
+    <%= cl_image_tag("shaker") %>
   </a>
-  <a href="/" class="navbar-wagon-title"><%= image_tag("logo") %></a>
+  <a href="/" class="navbar-wagon-title"><%= cl_image_tag("logo") %></a>
   <div class="navbar-wagon-right hidden-xs hidden-sm">
     <a href="" class="navbar-wagon-item navbar-wagon-link">Search</a>
     <a href="<%= new_cocktail_path  %>" class="navbar-wagon-item navbar-wagon-link">Add New Cocktail</a>
