fixed cl image tag error

--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar-wagon">
   <!-- Logo -->
   <a href="/" class="navbar-wagon-brand">
-    <%= cl_cl_image_tag("shaker") %>
+    <%= cl_image_tag("shaker") %>
   </a>
 
   <a href="/" class="navbar-wagon-title"><%= cl_image_tag("logo") %></a>
