--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -12,7 +12,7 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-6 ">
-      <div class="show_card_img" style="background-image: url( '<%= @cocktail.photo %>' );">
+      <div class="show_card_img" style="background-image: url( '<%= cl_image_path @cocktail.photo %>' );">
       </div>
     </div>
     <div class="col-sm-6">
