--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -32,7 +32,9 @@
 .footer .fa-heart {
   color: $red;
 }
-
+.footer-copyright {
+  color: rgba(0,0,0,0.3);
+}
 .footer-copyright a {
   color: black;
   opacity: 0.37;
