--- a/app/assets/stylesheets/components/show_card.scss
+++ b/app/assets/stylesheets/components/show_card.scss
@@ -10,7 +10,7 @@
       line-height: 27px;
       font-size: 21px;
       text-transform: capitalize;
-      font-family: Raleway;
+      font-family: Lato;
       font-weight: 700;
       margin-bottom: 12px;
     }
