Changed site title, changed bottom right of footer, removed home button from new cocktail page.

--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -46,6 +46,6 @@
     <a href="https://twitter.com/joshbolland95" target="_blank"><i class="fab fa-twitter"></i></a>
   </div>
   <div class="footer-copyright">
-    <a href="https://github.com/joshbolland" target="_blank">Made by Josh Bolland</a>
+    Josh Bolland <i class="far fa-copyright"></i> 2020
   </div>
 </div>
